WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114789
[GTK] fast/events/page-visibility-transition-test.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=114789
Summary
[GTK] fast/events/page-visibility-transition-test.html is timing out
Zan Dobersek
Reported
2013-04-18 00:12:50 PDT
The fast/events/page-visibility-transition-test.html layout test is timing out. No specific regression range I can provide unfortunately.
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fevents%2Fpage-visibility-transition-test.html
Attachments
Patch
(3.45 KB, patch)
2015-05-07 16:58 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anton Obzhirov
Comment 1
2013-05-22 06:05:11 PDT
The reason this test is failing: In GTK we expose only two states in (visible, hidden) in DumpRenderTree from 4 (visible, hidden, prerender, preview). This test tries to set prerender and preview states and wait for onVisibilityChange events. Shall we add support for the missing states in DumpRenderTree?
Martin Robinson
Comment 2
2013-05-22 06:52:49 PDT
I'm not sure that it's useful to do this for WebKit1, but if it's failing for WebKit2 it would be useful to fix it.
Anton Obzhirov
Comment 3
2013-07-10 09:17:51 PDT
It does pass on WebKit2 - but what should we do with WK1? I probably should update test expectation for WebKit2 in any case.
Martin Robinson
Comment 4
2014-04-18 19:07:34 PDT
These tests are also failing in WebKit2:
webkit.org/b/114789
fast/events/page-visibility-iframe-propagation-test.html [ Timeout ]
webkit.org/b/114789
fast/events/page-visibility-iframe-delete-test.html [ Timeout ]
webkit.org/b/114789
fast/events/page-visibility-iframe-move-test.html [ Timeout ] I've marked them with this bug in case they are failing for the same reason.
Martin Robinson
Comment 5
2015-05-07 16:58:44 PDT
Created
attachment 252653
[details]
Patch
Martin Robinson
Comment 6
2015-05-10 17:58:24 PDT
Comment on
attachment 252653
[details]
Patch Clearing flags on attachment: 252653 Committed
r184060
: <
http://trac.webkit.org/changeset/184060
>
Martin Robinson
Comment 7
2015-05-10 17:58:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug