[GTK] fast/events/page-visibility-transition-test.html is timing out https://bugs.webkit.org/show_bug.cgi?id=114789

Reviewed by Darin Adler.

Tools:

* WebKitTestRunner/gtk/TestControllerGtk.cpp:
(WTR::TestController::setHidden): Map and unmap the WebView when the harness
requests visibility changes.

LayoutTests:

* platform/gtk/TestExpectations: Unskip failing tests.

Canonical link: https://commits.webkit.org/162883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184060 268f45cc-cd09-0410-ab3c-d52691b4dbfc